fixed alignment issues with checkboxes

--- a/style/style.css
+++ b/style/style.css
@@ -128,6 +128,8 @@ span.clear { display:none; clear: both; }
 hr { margin: .7em 0; }
 p { margin-top: 0.75em; text-align: justify; }
 
+input[type='checkbox'], input[type='radio'] { height: 32px; vertical-align: middle; margin: 1px; }
+
 #crntOps{ float; left; width: 348px; }
 #lastOps{ padding-top: 2em; clear: both; }
 #transferOwnership, #endOp, #resetChar, #editPrecision { width: 300px; margin-bottom: .5em; }
